# automatic-generator-of-posts

./: Dockerfile  README.md  main.py  pyproject.toml  serve.py  ui.json
