[tool.poetry]
name = "writer-framework-with-instructor"
version = "0.1.0"
description = ""
authors = ["Andres <andresckamilo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
writer = {version = "^0.6.0"}
instructor = "^1.3.2"
python-dotenv = "^1.0.1"
logfire = "^0.41.0"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
